--- a/index.css
+++ b/index.css
@@ -276,7 +276,7 @@ header{
     margin: auto;
     margin-top: 80px;
     margin-bottom: 80px;
-    z-index: -10;
+    z-index: -90;
 }
 
 .lovedby>h3 {
@@ -1043,6 +1043,11 @@ footer {
         width: 100%;
     }
 
+    #bar>div{
+        font-size: 10px;
+        /* letter-spacing: 10px; */
+    }
+
     #navbar{
         justify-content: space-evenly;
     }
@@ -1053,6 +1058,10 @@ footer {
 
     #navbar .icons{
         height: 100%;
+        flex-direction: column;
+        /* justify-content:right ; */
+        /* align-self: right; */
+        /* align-content: right; */
         align-items: center;
        
     }
@@ -1068,6 +1077,16 @@ footer {
         margin-top: 60px;
         margin-left: 20px;
     }
+    .popup li{
+        margin: 10px;
+        font-size: 16px;
+    }
+    .popup .close{
+        top: 0;
+    }
+    #firstLi{
+        margin-top: 20px;
+    }
     .insidePopup #gggg{
         display: none;
     }
@@ -1075,7 +1094,17 @@ footer {
         height: 50%;
     }
     .popupxxx .closexxx{
-        right: 40px;
+        right: 60px;
+    }
+    .popupxxxInner{
+        flex-direction: column;
+    }
+    .popupxxxInner a{
+        margin-top: 20px;
+    }
+
+    .main-imgs img{
+        height: 100%;
     }
 
     .shopour{
@@ -1085,6 +1114,9 @@ footer {
     
         flex-wrap: wrap;
         row-gap: 40px;
+    }
+    .card-wrapperFour{
+        display: none;
     }
     .card-wrapper .card{
         width: 80%;
@@ -1099,6 +1131,7 @@ footer {
     .card-content button{
         font-size: 25px;
     }
+    
     
 
     /* .spotlight{
@@ -1127,7 +1160,19 @@ footer {
     .card-wrapperThree .card{
         width: 80%;
     }
+
+    .bestseller>.thirdMiddle{
+        flex-wrap: wrap;
+    } 
+
+    .categories>.fifthdMiddle {
+        flex-wrap: wrap;
+    }
     
+    #fifth>.pinkBar>a>img {
+        width: 100%;
+        height: 50px;
+    }
     #eight_logo{
         /* flex-wrap: wrap; */
         flex-direction: column;
